Improve booster icon positioning to avoid overlapping

--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@
     margin-left: 60%;
 }
 
-.sim-result.sim-top {
+.opponent .sim-result.sim-top {
     bottom: 12rem;
 }
 
